--- a/answers.tex
+++ b/answers.tex
@@ -71,7 +71,7 @@ Regarding the analysis, the paper uses mostly the makespan (a definition would b
 How does such an approach compare to Condor's matchmaking and its harnessing approach of wasted CPU power from otherwise idle desktop workstations?
 \end{review}
 
-\answer{\todo{Add related work to Condor papers and scheduling}}
+\answer{We added a paragraph in Related Work to discuses the difference and related scheduling algorithms.}
 
 
 
@@ -79,7 +79,7 @@ How does such an approach compare to Condor's matchmaking and its harnessing app
 The scheduling objectives of the research should be better clarified in the abstract. Also, the bibliography and references should include more concrete examples, as the Grid domain would benefit from this body of work. 
 \end{review}
 
-\answer{\todo{}}
+\answer{We added a paragraph in Related Work to discuss related scheduling algorithms.}
 
 
 
@@ -161,7 +161,7 @@ One concern is that it might be difficult to apply these techniques in a practic
 The paper is written in easy to understand practical terms, except Section 2 which contrasts with the rest of the paper through its rather theoretical nature. The connection between Section 2 and the rest of the paper is not really obvious and it took me several iterations of the paper to understand it. I suggest that the authors increase the cross references to better highlight it. 
 \end{review}
 
-\answer{\todo{}}
+\answer{In section 4, we increased the cross references to highlight the use of the conclusions of Section 2.}
 
 
 
@@ -169,7 +169,9 @@ The paper is written in easy to understand practical terms, except Section 2 whi
 The drawback with this paper in my opinion is the evaluation done using some mixture of ``simulated real-world workflows''. While I acknowledge the importance of simulation in validating such heuristics, I am not convinced that one of its main characteristics, the reproducibility, is guaranteed in this paper. The workflow traces injected in the workflow simulator do not seem to be open data. In general, I favour a complete separation between complete synthetic simulation, and its validation in isolated real-world scenarios, but through real execution. 
 \end{review}
 
-\answer{\todo{}}
+\answer{We added a link where other researchers can download our traces.}
+
+\revised{Traces, profile data, and characterizations are freely available online for the community [68]. }
 
 
 
@@ -177,7 +179,9 @@ The drawback with this paper in my opinion is the evaluation done using some mix
 On the other hand, the authors do not aim to analyse the results with respect to workflow structure and topological characteristics, which makes the reusability of the results in different contexts difficult to assess. Table 2 contains very superficial data in this direction. I suggest that the authors add a discussion section where they take a step back and try to formulate some general recommendations that can be used by practitioners for running different workflows in the Cloud. In this sense, I have doubts that the five workflows cover all patterns encountered today in scientific workflows. Adding some synthetic workflows to the simulation could strengthen the completeness of the evaluation.
 \end{review}
 
-\answer{\todo{}}
+\answer{We added a paragraph to discuss the general recommendations in Section 4.3:}
+
+\revised{Our experimental results show that adaptive task reclustering methods outcomes better performance than simple static methods that retry failed clustered jobs...}
 
 
 
